Adding noscript balise to blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <div class="post">
 
+  <noscript>This website use Javascript for displaying LateX formulas : enable it for a better user experience</noscript>
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
   <header class="post-header">
